--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <section id="leitura-recomendada">
             <h2><i class="fas fa-book"></i> Quer começar sua coleção de HQs?</h2>
             <p>Confira HQs com desconto direto na Amazon. Comprando pelos links, você apoia o canal!</p>
-            <a href="https://amzn.to/4kNtoWs" target="_blank" class="amazon-link">Ver HQs na Amazon</a>
+            <a href="https://amzn.to/4nY0KnJ" target="_blank" class="amazon-link">Ver HQs na Amazon</a>
         </section>
         
         <section id="contato">
